Add meta package to install every syntax plugin

--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,88 @@
       "mod_version": "3"
     },
     {
+      "description": "Meta package for all syntax plugins",
+      "version": "0.1",
+      "path": "plugins/all_languages.lua",
+      "id": "all_languages",
+      "mod_version": "3",
+      "dependencies": {
+        "language_angelscript": {},
+        "language_assembly_x86": {},
+        "language_autohotkey": {},
+        "language_batch": {},
+        "language_bib": {},
+        "language_caddyfile": {},
+        "language_cmake": {},
+        "language_containerfile": {},
+        "language_crystal": {},
+        "language_csharp": {},
+        "language_d": {},
+        "language_dart": {},
+        "language_diff": {},
+        "language_elixir": {},
+        "language_elm": {},
+        "language_env": {},
+        "language_erb": {},
+        "language_fe": {},
+        "language_fennel": {},
+        "language_fstab": {},
+        "language_gdscript": {},
+        "language_glsl": {},
+        "language_gmi": {},
+        "language_go": {},
+        "language_hlsl": {},
+        "language_hs": {},
+        "language_htaccess": {},
+        "language_ignore": {},
+        "language_ini": {},
+        "language_java": {},
+        "language_jiyu": {},
+        "language_jsx": {},
+        "language_julia": {},
+        "language_ksy": {},
+        "language_liquid": {},
+        "language_lobster": {},
+        "language_make": {},
+        "language_meson": {},
+        "language_miniscript": {},
+        "language_moon": {},
+        "language_nelua": {},
+        "language_nginx": {},
+        "language_nim": {},
+        "language_nix": {},
+        "language_objc": {},
+        "language_odin": {},
+        "language_perl": {},
+        "language_php": {},
+        "language_pico8": {},
+        "language_pkgbuild": {},
+        "language_po": {},
+        "language_pony": {},
+        "language_powershell": {},
+        "language_psql": {},
+        "language_r": {},
+        "language_rescript": {},
+        "language_rivet": {},
+        "language_ruby": {},
+        "language_rust": {},
+        "language_sass": {},
+        "language_scala": {},
+        "language_sh": {},
+        "language_ssh_config": {},
+        "language_tcl": {},
+        "language_teal": {},
+        "language_tex": {},
+        "language_toml": {},
+        "language_ts": {},
+        "language_tsx": {},
+        "language_v": {},
+        "language_wren": {},
+        "language_yaml": {},
+        "language_zig": {}
+      }
+    },
+    {
       "description": "Automatically inserts closing brackets and quotes. Also allows selected text to be wrapped with brackets or quotes.",
       "version": "0.1",
       "path": "plugins/autoinsert.lua",
